ajustes na api e no front

--- a/front/src/app/products/product-list/product-list.component.html
+++ b/front/src/app/products/product-list/product-list.component.html
@@ -2,9 +2,9 @@
 <ol class="list-unstyled row" >
     <li class=" col-md-4" *ngFor="let item of products.products">
             <figure class="figure"  >
-                    <img src="http://cinq.test/{{item.Image}}" alt="{{item.Name}}" class="img-thumbnail">
-                    <figcaption class="figcaption">{{item.Name}} - R$ {{item.Price}} <br> <a href="retailers/{{item.retailer.id}}">{{item.retailer.Name}}</a></figcaption>
-                    <a class="btn btn-primary" href="products/{{item.id}}" >Details</a>
+                    <img src="http://localhost:8000/images/products/{{item.image}}" alt="{{item.name}}" class="img-thumbnail">
+                    <figcaption class="figcaption">{{item.name}} - R$ {{item.price}} <br> <a href="retailers/{{item.retailer.retailer_id}}">{{item.retailer.name}}</a></figcaption>
+                    <a class="btn btn-primary" href="products/{{item.product_id}}" >Details</a>
                 </figure>
     </li>
     
