--- a/front/src/app/products/product-detail/product-detail.component.html
+++ b/front/src/app/products/product-detail/product-detail.component.html
@@ -3,17 +3,17 @@
 
 <div class="row">
   <div class="col-6">
-      <img src="http://cinq.test/{{product.Image}}" alt="{{product.Name}}" class="img-thumbnail">
+      <img src="http://localhost:8000/images/products/{{product.image}}" alt="{{product.name}}" class="img-thumbnail">
   </div>
   
   <div class="col-6">
-    <h3>{{product.Name}}</h3>
-    <h4>R$ {{product.Price}}</h4>
+    <h3>{{product.name}}</h3>
+    <h4>R$ {{product.price}}</h4>
     <p><strong>Description:</strong><br>
-    {{product.Description}}
+    {{product.description}}
   </p>
   
-    <p><strong>Liked ? Send to your e-mail:</strong></p> 
+    <p><strong>Liked? Send to your e-mail:</strong></p> 
     <form [formGroup]="formulario" class="form-inline" (ngSubmit)="sendEmail()">
       <input type="email" class="form-control mb-2 mr-sm-2" formControlName="Email" >
       <button type="submit" class="btn btn-primary mb-2">Send</button>
@@ -23,7 +23,7 @@
   
   <p>
     <strong>Retailer: </strong>
-    <a href="retailers/{{product.retailer.id}}">{{product.retailer.Name}}</a>
+    <a href="retailers/{{product.retailer.retailer_id}}">{{product.retailer.name}}</a>
   </p>
 
   </div>
