--- a/front/src/app/products/products-form/products-form.component.html
+++ b/front/src/app/products/products-form/products-form.component.html
@@ -5,17 +5,17 @@
       <form [formGroup]="formulario" class="form form-group"  (ngSubmit)="saveProduct()" enctype="multipart/form-data">
         <div class="col-6">
           <label for="Name" class="font-weight-bold">Name</label>
-          <input type="text" formControlName="Name" class="form-control">
+          <input type="text" formControlName="name" class="form-control">
           <label for="Price" class="font-weight-bold">Price</label>
-          <input type="text" id="Price" class="form-control" formControlName="Price">
+          <input type="text" id="Price" class="form-control" formControlName="price">
           <label for="Description" class="font-weight-bold">Description</label>
-          <textarea formControlName="Description" class="form-control" id="Description" cols="100" rows="5"></textarea>
+          <textarea formControlName="description" class="form-control" id="Description" cols="100" rows="5"></textarea>
           <label for="retailer">Retailer</label>
           <select class="form-control" formControlName="retailer_id">
-            <option *ngFor="let retailer of retailers" value="{{retailer.id}}">{{retailer.Name}}</option>
+            <option *ngFor="let retailer of retailers" value="{{retailer.retailer_id}}">{{retailer.name}}</option>
           </select>
           <label for="Image" class="font-weight-bold">Image</label>
-          <input type="file" id="Image" class="form-control" formControlName="Image" (change)="onFileChange($event)" >
+          <input type="file" id="Image" class="form-control" formControlName="image" (change)="onFileChange($event)" >
         </div>
         <ul class="alert alert-{{class}} mt-3 col-6" [hidden]="HideMsg">
           <li>{{message}}</li>
