--- a/front/src/app/retailers/retailer-form/retailer-form.component.html
+++ b/front/src/app/retailers/retailer-form/retailer-form.component.html
@@ -5,13 +5,13 @@
       <form [formGroup]="formulario" class="form form-group"  (ngSubmit)="saveRetailer()" enctype="multipart/form-data">
         <div class="col-6">
           <label for="Name" class="font-weight-bold">Name</label>
-          <input type="text" formControlName="Name" class="form-control">
+          <input type="text" formControlName="name" class="form-control">
           <label for="WebSite" class="font-weight-bold">WebSite</label>
-          <input type="url" id="WebSite" class="form-control" formControlName="WebSite">
+          <input type="url" id="WebSite" class="form-control" formControlName="site">
           <label for="Description" class="font-weight-bold">Description</label>
-          <textarea formControlName="Description" class="form-control" id="Description" cols="100" rows="5"></textarea>
+          <textarea formControlName="description" class="form-control" id="Description" cols="100" rows="5"></textarea>
           <label for="Logo" class="font-weight-bold">Logo</label>
-          <input type="file" id="Logo" class="form-control" formControlName="Logo" (change)="onFileChange($event)" >
+          <input type="file" id="Logo" class="form-control" formControlName="logo" (change)="onFileChange($event)" >
         </div>
         <ul class="alert alert-{{class}} mt-3 col-6" [hidden]="HideMsg">
           <li>{{message}}</li>
