ajuste variavel de ambiente

--- a/front/src/app/products/product-detail/product-detail.component.html
+++ b/front/src/app/products/product-detail/product-detail.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-6">
-      <img src="http://localhost:8000/images/products/{{product.image}}" alt="{{product.name}}" class="img-thumbnail">
+      <img src="{{apiUrl}}/images/products/{{product.image}}" alt="{{product.name}}" class="img-thumbnail">
   </div>
   
   <div class="col-6">
